k8s/argocd-playground/multi-tenant/infrastructure/traefik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: '22'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  ports:
    - port: 8080
      name: http
      targetPort: 8000
      protocol: TCP
    - port: 8443
      name: https
      targetPort: 8443
      protocol: TCP
    - port: 9000
      name: traefik
      targetPort: 9000
      protocol: TCP
